jenkins remake